--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Meu WebGIS com Leaflet</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Estilos do Leaflet -->
+  <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <style>
     #map {
@@ -17,25 +17,37 @@
 <body>
   <div id="map"></div>
 
-  <!-- Scripts do Leaflet -->
+  <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
-  <!-- Script do mapa -->
   <script>
     // Inicializa o mapa
-    var map = L.map('map').setView([-15.78, -47.93], 4); // Centro no Brasil
+    var map = L.map('map').setView([-15.78, -47.93], 4);
 
-    // Camada base OpenStreetMap
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    // Camadas base
+    var osm = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       maxZoom: 19,
       attribution: '© OpenStreetMap contributors'
     }).addTo(map);
 
-    // Carrega camada GeoJSON
+    var topo = L.tileLayer('https://{s}.tile.opentopomap.org/{z}/{x}/{y}.png', {
+      maxZoom: 17,
+      attribution: '© OpenTopoMap'
+    });
+
+    // Camadas base disponíveis para seleção
+    var baseMaps = {
+      "OpenStreetMap": osm,
+      "OpenTopoMap": topo
+    };
+
+    // Camadas vetoriais (exemplo)
+    var camadaGeojson = L.layerGroup();
+
     fetch('dados.geojson')
       .then(response => response.json())
       .then(data => {
-        L.geoJSON(data, {
+        var geojsonLayer = L.geoJSON(data, {
           onEachFeature: function (feature, layer) {
             if (feature.properties && feature.properties.nome) {
               layer.bindPopup("Nome: " + feature.properties.nome);
@@ -44,9 +56,30 @@
           style: {
             color: "blue",
             weight: 2
+          },
+          pointToLayer: function (feature, latlng) {
+            return L.circleMarker(latlng, {
+              radius: 6,
+              fillColor: "blue",
+              color: "#000",
+              weight: 1,
+              opacity: 1,
+              fillOpacity: 0.8
+            });
           }
-        }).addTo(map);
+        });
+        camadaGeojson.addLayer(geojsonLayer);
       });
+
+    // Camadas sobrepostas (layer overlays)
+    var overlayMaps = {
+      "Dados GeoJSON": camadaGeojson
+    };
+
+    // Adiciona controle de camadas ao mapa
+    L.control.layers(baseMaps, overlayMaps, {
+      collapsed: false // true = botão; false = caixa sempre visível
+    }).addTo(map);
   </script>
 </body>
 </html>
