--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 
     // Camadas sobrepostas (layer overlays)
     var overlayMaps = {
-      "Camadas1": camadaGeojson;
-      "Camadas2": camadaGeojson;
+      "Camadas1": camadaGeojson,
+      "Camadas2": camadaGeojson
     };
 
     // Adiciona controle de camadas ao mapa
